RESOLVED FIXED158581
AX: VoiceOver Unable to View Download Progress or Completion Status for Mail Attachments
https://bugs.webkit.org/show_bug.cgi?id=158581
Summary AX: VoiceOver Unable to View Download Progress or Completion Status for Mail ...
chris fleizach
Reported 2016-06-09 14:25:35 PDT
When I double-tap on an attachment, VoiceOver says “[filename], double-tap to download, attachment.” There is no way to tell the progress of a download or if a download has finished because that label remains the same. <rdar://problem/26182955>
Attachments
Patch (7.55 KB, patch)
2016-06-09 14:51 PDT, chris fleizach
darin: review+
Radar WebKit Bug Importer
Comment 1 2016-06-09 14:30:40 PDT
chris fleizach
Comment 2 2016-06-09 14:51:50 PDT
chris fleizach
Comment 3 2016-06-09 18:01:49 PDT
Joanmarie can you review?
Darin Adler
Comment 4 2016-06-09 20:18:19 PDT
Comment on attachment 280954 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280954&action=review > Source/WebCore/accessibility/AccessibilityAttachment.cpp:-104 > > - if (action.length()) > - textOrder.append(AccessibilityText(action, ActionText)); Should delete the blank line too.
chris fleizach
Comment 5 2016-06-09 22:55:39 PDT
(In reply to comment #4) > Comment on attachment 280954 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=280954&action=review > > > Source/WebCore/accessibility/AccessibilityAttachment.cpp:-104 > > > > - if (action.length()) > > - textOrder.append(AccessibilityText(action, ActionText)); > > Should delete the blank line too. Thanks, will do
chris fleizach
Comment 6 2016-06-09 23:04:53 PDT
Note You need to log in before you can comment on or make changes to this bug.