AX: VoiceOver Unable to View Download Progress or Completion Status for Mail Attachments https://bugs.webkit.org/show_bug.cgi?id=158581

Reviewed by Darin Adler.

Source/WebCore:

Update attachment element accessibility so that:
   1) the action name comes first to match UI
   2) on iOS, it has the updates frequently trait

Make sure this test now runs on iOS as well.

Modified tests: accessibility/attachment-element.html

* accessibility/AccessibilityAttachment.cpp:
(WebCore::AccessibilityAttachment::accessibilityText):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityCanFuzzyHitTest]):
(-[WebAccessibilityObjectWrapper accessibilityTraits]):
(-[WebAccessibilityObjectWrapper accessibilityValue]):
(-[WebAccessibilityObjectWrapper accessibilityIsAttachmentElement]):
(-[WebAccessibilityObjectWrapper accessibilityIsComboBox]):

LayoutTests:

* accessibility/attachment-element-expected.txt:
* accessibility/attachment-element.html:
* accessibility/ios-simulator/attributed-string-for-range-expected.txt:
* platform/ios-simulator/TestExpectations:
* platform/ios-simulator/accessibility/attachment-element-expected.txt: Added.



Canonical link: https://commits.webkit.org/176695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201913 268f45cc-cd09-0410-ab3c-d52691b4dbfc